plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.146'
    id 'idea'
    id 'com.modrinth.minotaur' version '2.+'
}

import java.security.MessageDigest

def generateHash = { String input ->
    def digest = MessageDigest.getInstance("MD5")
    def bytes = digest.digest(input.bytes)
    return bytes.encodeHex().toString().substring(0, 6)
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

def computedVersion=99497275061637776
version = computedVersion
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("src/generated/**/.cache")
}

repositories {
}

base {
    archivesName = "Erosion-neoforge"
}

modrinth {
    token = System.getenv("MODRINTH_TOKEN")
    projectId = "erosion-mod"

    versionNumber = project.version.toString()
    versionName = "Erosion ${project.version}"

    uploadFile = jar

    gameVersions = ["1.21.1"]
    loaders = ["neoforge"]

    versionType = "release"

    changelog = "Automated release ${project.version}"
}

tasks.withType(Jar).configureEach {
    archiveVersion = ""
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

tasks.named('processResources', ProcessResources) {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version       : minecraft_version,
            minecraft_version_range : minecraft_version_range,
            neo_version             : neo_version,
            loader_version_range    : loader_version_range,
            mod_id                  : mod_id,
            mod_name                : mod_name,
            mod_license             : mod_license,
            mod_version             : computedVersion,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata


publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' 
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}